# moex_iss

./: README.md  pyproject.toml  requirements-dev.txt  requirements-quant.txt  requirements.txt  t.py
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  cd.yml  ci.yml  release.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yml  config.yml
examples/: 01_basic_connection.py  02_get_history.py  03_get_candles.py  04_futures_si.py  05_multiple_instruments.py  06_async_download.py  07_export_parquet.py  07_export_parquets.py  08_feature_pipeline.py  09_returns_bonds.py
examples/data/: MMU6_10m_features.csv
moex_iss/: __init__.py  async_client.py  auth.py  client.py  config.py  dataframe.py  endpoints.py  exceptions.py  limiter.py  models.py  pagination.py  parser.py  session.py
moex_iss/dataframe/: query.py
moex_iss/filters/: bond.py
moex_iss/services/: base.py  bonds.py  candles.py  container.py  history.py
moex_iss/services/bonds/: __init__.py  analytics.py  bonds.py  coupons.py
src/: __init__.py
src/moex_iss/: _version.py  config.py
src/moex_iss/auth/: __init__.py  auth.py
src/moex_iss/clients/: __init__.py  async_client.py  client.py
src/moex_iss/dataframe/: __init__.py  dataframe.py  query.py
src/moex_iss/endpoints/: __init__.py  endpoints.py
src/moex_iss/filters/: __init__.py  base.py  bond.py
src/moex_iss/models/: __init__.py
src/moex_iss/services/: __init__.py  base.py  candles.py  container.py  history.py
src/moex_iss/services/bonds/: __init__.py  analytics.py  bonds.py  coupons.py
src/moex_iss/sessions/: __init__.py  session.py
src/moex_iss/utils/: __init__.py  exceptions.py  pagination.py  parser.py
tests/: conftest.py  test_async_client.py  test_candle_dataframe.py  test_client.py  test_client_candles.py  test_dataframe.py  test_errors.py  test_http_client.py  test_limiter.py  test_pagination.py  test_parser.py  test_retry.py
tests/fixtures/: candles.json  history.json
