[build-system]
requires = [
    "setuptools>=75",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]

name = "moex-iss"

version = "1.0.0"

description = "Modern Python client for Moscow Exchange ISS API"

readme = "README.md"

requires-python = ">=3.13"

license = { text = "Apache-2.0" }


authors = [
    { name = "Nikita Zalesov" }
]


dependencies = [

    # HTTP
    "requests>=2.32",
    "httpx>=0.28",

    # Data
    "pandas>=2.3",
    "numpy>=2.0",
    "pyarrow>=17",

    # Validation / config
    "pydantic>=2.10",
    "python-dotenv>=1.0",

    # Reliability
    "tenacity>=9"
]


[project.optional-dependencies]


dev = [

    # Lint / format
    "ruff>=0.12",

    # Type checking
    "mypy>=1.16"
]


test = [

    "pytest>=8.4",
    "pytest-cov>=6.2",
    "pytest-asyncio>=1.0",

    # HTTP mocking
    "responses>=0.25",
    "respx>=0.22"
]


quant = [

    "scipy>=1.14",
    "scikit-learn>=1.6",
    "statsmodels>=0.14",
    "arch>=7.0",
    "catboost>=1.2",
    "optuna>=4.0"
]


[project.urls]

Homepage = "https://github.com/8bitniksis/moex_iss"

Repository = "https://github.com/8bitniksis/moex_iss"


# ======================================================
# Ruff
# ======================================================

[tool.ruff]

target-version = "py313"

line-length = 88


[tool.ruff.lint]

select = [

    # pycodestyle
    "E",

    # pyflakes
    "F",

    # import sorting
    "I",

    # bugbear
    "B",

    # pyupgrade
    "UP"
]


ignore = [

    # временно, пока приводим код к типизации
    "B008"
]


[tool.ruff.format]

quote-style = "double"

indent-style = "space"


# ======================================================
# MyPy
# ======================================================

[tool.mypy]

python_version = "3.14"


check_untyped_defs = true

warn_return_any = true

warn_unused_ignores = true

warn_redundant_casts = true

warn_unused_configs = true


# постепенно включим strict после покрытия типов


# ======================================================
# Pytest
# ======================================================

[tool.pytest.ini_options]

testpaths = [
    "tests"
]

addopts = [
    "-ra"
]