[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"


# =====================================================
# Project
# =====================================================

[project]
name = "moex-iss"
dynamic = ["version"]

description = "Modern Python client for Moscow Exchange ISS API"
readme = "README.md"
requires-python = ">=3.13"

license = { text = "Apache-2.0" }

authors = [
    { name = "Nikita Zalesov" },
]

keywords = [
    "moex",
    "iss",
    "moscow exchange",
    "trading",
    "finance",
    "api",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "requests>=2.32",
    "httpx>=0.28",
    "pandas>=2.2",
    "tenacity>=9.0",
]


[project.optional-dependencies]

dev = [
    "build>=1.2",
    "ruff>=0.12",
    "mypy>=1.16",
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio",
    "responses",
    "pandas-stubs",
]


[project.urls]
Homepage = "https://github.com/8bitniksis/moex_iss"
Repository = "https://github.com/8bitniksis/moex_iss"
Issues = "https://github.com/8bitniksis/moex_iss/issues"


# =====================================================
# setuptools
# =====================================================

[tool.setuptools]

package-dir = { "" = "src" }


[tool.setuptools.packages.find]

where = ["src"]


# =====================================================
# setuptools-scm
# =====================================================

[tool.setuptools_scm]

version_file = "src/moex_iss/_version.py"


# =====================================================
# pytest
# =====================================================

[tool.pytest.ini_options]

pythonpath = [
    "src",
]

testpaths = [
    "tests",
]


# =====================================================
# Ruff
# =====================================================

[tool.ruff]

target-version = "py313"
line-length = 88

exclude = [
    "src/moex_iss/_version.py",
]


[tool.ruff.lint]

select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "ANN",
]

ignore = [
    "ANN401",
]


[tool.ruff.lint.per-file-ignores]

"tests/**/*.py" = [
    "ANN",
]

"examples/**/*.py" = [
    "ANN",
]


[tool.ruff.format]

quote-style = "double"


# =====================================================
# MyPy
# =====================================================

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
mypy_path = "src"
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "moex_iss.services.*",
]
disable_error_code = [
    "no-any-return",
]